maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:23: error: ')' expected but 'if' found.
	if (!aMurNord(x,y+1)) {
        ^JediEscaper:29: error: ';' expected but 'if' found.
	if (!aMurOuest(x,y) {
        ^